# esp32-pi-solar-control

./: README.md  pyproject.toml  server.py
esp32_sensor/: ble_client.py  boot.py  monitor.py
esphome/: solar.yaml
pizero/: server.py  utils.py
pizero/solar_logger/: solar_logger.py
sensor/: monitor.py
static/: index.html
