[tool.poetry]
name = "esp-server"
version = "0.1.0"
description = ""
authors = ["Shai Dvash <shai.dvash@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
bless = "^0.2.6"
aiohttp = "^3.11.18"
aiohttp-cors = "^0.8.1"
bleak = "0.20.2"
pydantic = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
